# threads

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ege2022/: task_2.py  task_3.py  task_7.py
ege2022/day_1/: task_1.py  task_4.py  task_5.py  task_6.py
ege2022/day_2/: Basic Mathematical Operations.py  Convert a string to an array.py  Multiple of index.py  task_1.py  task_2.py
ege2022/day_3/: Is there a vowel in there?.py  Sum of positive.py  input.txt  input_2.txt  task_1.py  task_2.py
ege2022/day_4/: example.txt  task_1.py  task_2.py  task_3.py
ege2022/day_7/: task_17.py  task_17_p.py  task_270.py
ege2022/day_8/: input.txt  lesson_1.py  task_22.py  task_23.py  task_23_2.py
ege2022/day_9/: demo_24.py  task_190.py
laba_2/: CMakeLists.txt  MyQueue.cpp  MyQueue.h  main.cpp  queue.cpp  queue.h
laba_3/: 24-4.txt  CMakeLists.txt  first.txt  main.cpp  second.txt  text_analis.py  third.txt
laba_5/: CMakeLists.txt  main.cpp
laba_6/: CMakeLists.txt  main.cpp
laba_7/: CMakeLists.txt  main.cpp
myQueue/: CMakeLists.txt  MyQueue.cpp  MyQueue.h  main.cpp
stack/: CMakeLists.txt  MyStack.cpp  MyStack.h  main.cpp
